recorganized text and code

--- a/references.bib
+++ b/references.bib
@@ -156,7 +156,16 @@ doi = {10.1177/0956797609357751}
   year={1995},
   publisher={Springer}
 }
-@article{rubin1975, title={What the "Good Language Learner" Can Teach Us}, volume={9}, DOI={10.2307/3586011}, number={1}, journal={TESOL Quarterly}, author={Rubin, Joan}, year={1975}, pages={41}}
+@article{rubin1975, 
+  title={What the "Good Language Learner" Can Teach Us}, 
+  volume={9}, 
+  DOI={10.2307/3586011}, 
+  number={1}, 
+  journal={TESOL Quarterly}, 
+  author={Rubin, Joan}, 
+  year={1975}, 
+  pages={41}
+}
 @article{argyle1969,
   title={Observer or observed? A reversible perspective in person perception},
   author={Argyle, Michael and Williams, Marylin},
@@ -174,7 +183,15 @@ doi = {10.1177/0956797609357751}
   publisher={JSTOR}
 }
 
-@article{frasernicholson1989, title={Social Criticism without Philosophy: An Encounter between Feminism and Postmodernism}, DOI={10.2307/827810}, number={21}, journal={Social Text}, author={Fraser, Nancy and Nicholson, Linda}, year={1989}, pages={83}}
+@article{frasernicholson1989, 
+  title={Social Criticism without Philosophy: An Encounter between Feminism and Postmodernism}, 
+  DOI={10.2307/827810}, 
+  number={21}, 
+  journal={Social Text}, 
+  author={Fraser, Nancy and Nicholson, Linda}, 
+  year={1989}, 
+  pages={83}
+}
 
 
 @book{calogero2011,
