--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -93,153 +93,27 @@ clarksmith_women <- read.csv("Cleaned data/clarksmith_women.csv")
 ```
 
 ##Combining Samples
-Data from two different samples were used for this study and are discussed below. In the measures section that follows we refer to them as Sample 1 and Sample 2. Sample 1 is from a co-ed liberal arts college in the northeast and Sample 2 is from a women’s liberal arts college in the northeast.
 
-```{r alphas}
-#######Alphas
-
-##SOO
-#Clark
-clark_extsoo_alpha <- psych::alpha(select(clark_measures, otherint_1, otherint_2, 
-                                          otherint_5, otherint_6, otherint_10))$total[2]
-clark_intsoo_alpha <- psych::alpha(select(clark_measures, otherint_3, otherint_4, 
-                                          otherint_7, otherint_8, otherint_9, otherint_11, 
-                                          otherint_12))$total[2]
-#Smith
-smith_extsoo_alpha <- psych::alpha(select(smith, otherint_1, otherint_2, otherint_5, 
-                                          otherint_6, otherint_10))$total[2]
-smith_intsoo_alpha <- psych::alpha(select(smith, otherint_3, otherint_4, otherint_7, 
-                                          otherint_8, otherint_9, otherint_11, otherint_12))$total[2]
-
-##Interaction Authenticity
-#Clark
-clark_intauth_alpha <- psych::alpha(select(clark_measures, inter_1, inter_3, inter_5, 
-                                           inter_6, inter_7, inter_9, inter_10, interaux_5, 
-                                           interaux_6))$total[2]
-#Smith
-smith_intauth_alpha <- psych::alpha(select(smith, inter_1, inter_3, inter_5, inter_6, 
-                                           inter_7, inter_9, inter_10, interaux_5, 
-                                           interaux_6))$total[2]
-
-##SSO
-#Clark - two items
-clark_howbody_alpha<- psych::alpha(select(clark_measures, howbody_1, howbody_2))$total[2]
-#Smith - two items
-smith_howbody_alpha <- psych::alpha(select(smith, howbody_1, howbody_2))$total[2]
-#Clark - three items
-clark_howbody3 <- psych::alpha(select(clark_measures, howbody_1, howbody_2, howbody_3))
-#Smith - three items
-smith_howbody3 <- psych::alpha(select(smith, howbody_1, howbody_2, howbody_3))
-
-##Relationship Agency
-#Clark
-clark_relag_alpha <- psych::alpha(select(clark_measures, relag_1, relag_2, relag_3, 
-                                         relag_4, relag_5, relag_6, relag_7, relag_8, 
-                                         relag_9.r))$total[2]
-#Smith
-smith_relag_alpha <- psych::alpha(select(smith, relag_1, relag_2, relag_3, relag_4, 
-                                         relag_5, relag_6, relag_7, relag_8, 
-                                         relag_9.r))$total[2]
-
-#corr.test(select(clark_measures, relag_1, relag_2, relag_3, relag_4, relag_5, relag_6, relag_7, relag_8, relag_9.r))
-#corr.test(select(smith, relag_1, relag_2, relag_3, relag_4, relag_5, relag_6, relag_7, relag_8, relag_9.r))
-##DROPPING ITEM 9
-clark_relag_alpha <- psych::alpha(select(clark_measures, relag_1, relag_2, relag_3, 
-                                         relag_4, relag_5, relag_6, relag_7, relag_8))$total[2]
-
-smith_relag_alpha <- psych::alpha(select(smith, relag_1, relag_2, relag_3, relag_4, 
-                                         relag_5, relag_6, relag_7, relag_8))$total[2]
-
-
-##Career Aspirations
-#Clark
-clark_measures <- clark_measures %>% #reverse code certain career aspiration variables
-  mutate(careerasp4.r = (min(careerasp_4, na.rm = TRUE) + max(careerasp_4, na.rm = TRUE) - careerasp_4),
-         careerasp7.r = (min(careerasp_7, na.rm = TRUE) + max(careerasp_7, na.rm = TRUE) - careerasp_7),
-         careerasp10.r = (min(careerasp_10, na.rm = TRUE) + max(careerasp_10, na.rm = TRUE) - careerasp_10))
-
-clark_careerasp_alpha <- psych::alpha(select(clark_measures, careerasp_1, careerasp_2, 
-                                             careerasp_3, careerasp4.r, careerasp_5, 
-                                             careerasp_6, careerasp7.r, careerasp_8, 
-                                             careerasp_9, careerasp10.r))$total[2]
-
-#Smith
-smith <- smith %>% #reverse code certain career aspiration variables
-  mutate(careerasp4.r = (min(careerasp_4, na.rm = TRUE) + max(careerasp_4, na.rm = TRUE) - careerasp_4),
-         careerasp7.r = (min(careerasp_7, na.rm = TRUE) + max(careerasp_7, na.rm = TRUE) - careerasp_7),
-         careerasp10.r = (min(careerasp_10, na.rm = TRUE) + max(careerasp_10, na.rm = TRUE) - careerasp_10))
-
-smith_careerasp_alpha <- psych::alpha(select(smith, careerasp_1, careerasp_2, 
-                                             careerasp_3, careerasp4.r, careerasp_5, 
-                                             careerasp_6, careerasp7.r, careerasp_8, 
-                                             careerasp_9, careerasp10.r))$total[2]
-
-###TSO
-#Clark--external and internal
-clark_funcTSO_alpha <- psych::alpha(select(clark_measures, tso_1, tso_2, tso_4, tso_7, tso_9), check.keys=TRUE)$total[2]
-clark_physTSO_alpha <- psych::alpha(select(clark_measures, tso_3, tso_5, tso_6, tso_8, tso_10), check.keys=TRUE)$total[2]
-
-#Smith--external and internal
-smith_funcTSO_alpha <- psych::alpha(select(smith, tso_1, tso_2, tso_4, tso_7, tso_9), check.keys=TRUE)$total[2]
-smith_physTSO_alpha <- psych::alpha(select(smith, tso_3, tso_5, tso_6, tso_8, tso_10), check.keys=TRUE)$total[2]
-
-
+```{r}
+ns <- clarksmith_women %>%
+  group_by(smith_or_clark) %>%
+  summarise(n = n()) %>%
+  as.matrix() %>% as.numeric()
 ```
 
-```{r demographics}
-#favstats(~TSO_A, data=clarksmith_women)
-#favstats(~a2pSOO_A, data=clarksmith_women)
-#favstats(~howbody_avg_A, data=clarksmith_women)
-#favstats(~relag_A, data=clarksmith_women)
-#favstats(~careerasp_A, data=clarksmith_women)
-#favstats(~authenticity_A, data=clarksmith_women)
-#favstats(~trigram_score_A, data=clarksmith_women)
-
-#Mean and SD of age of sample
-mean_age <- favstats(~age_A, data = clarksmith_women)$mean
-sd_age <- favstats(~age_A, data = clarksmith_women)$sd
-tally(clarksmith_women$race_A == clarksmith_women$race_P)
-
-#Calculating race percentages
-tally(~race_A, data = clarksmith_women)  #Note that we can add "format = percentage" and not need to calculate
-percentage_black <- 6/(6+18+31+6+3)*100
-percent_asian <- 18/(6+18+31+6+3)*100
-percent_white <- 31/(6+18+31+6+3)*100
-percent_latinx <- 6/(6+18+31+6+3)*100
-percent_other <- 3/(6+18+31+6+3)*100
-tally(~sexor_A, data=clarksmith_women)
-percent_straight <-(41/64)*100
-percent_queer <- (3+8+5)/64*100
-tally(~gender_A, data=clarksmith_women)
-
-table(clarksmith_women$race_A, clarksmith_women$race_P)
-samerace_white <- 16/2 #divide by 2 since table is people, not pairs
-samerace_minority <- (6+2)/2
-mixedrace_white <- 2+10+2+1
-mixedrace_minority <- 1+2+1+1
-
-test <- clarksmith_women %>%
-  filter(race_A==3, race_A!=race_P)
-
-tally(~gender, data=clark_measures)
-tally(~gender, data=smith)
-```
+Data from two different, but demographically equivalent, samples were combined to create the final analysis sample (*N =* `r nrow(clarksmith_women)`) used in this study. In the measures section that follows we refer to them as Sample 1 and Sample 2. Sample 1 (*N =* `r ns[3]`) is from a co-ed liberal arts college in the northeast US and Sample 2 (*N =* `r ns[4]`) is from a women’s liberal arts college in the northeast US.
 
 ```{r correaltions}
-clarksmith_correlations <- clarksmith_women %>%
-  select(TSO_A, authenticity_A, a2pSOO_A, howbody_avg_A, 
-         relag_A, careerasp_A,  trigram_score_A, TSO_P, 
-         authenticity_P, a2pSOO_P, howbody_avg_P, 
-         relag_P, careerasp_P, trigram_score_P)
+#NOT SURE WHAT THIS CHUNK WAS FOR BUT ITS NOT NEEDED
 
-#Correlation tables
-correlations <- apa.cor.table(clarksmith_correlations, table.number=1)
-```
-
-```{r trigram}
-#Cognitive performance - Full sample
-mean_trigram <- favstats(~trigram_score_A, data=clarksmith_women)$mean
-sd_trigram <- favstats(~trigram_score_A, data=clarksmith_women)$sd
+# clarksmith_correlations <- clarksmith_women %>%
+#   select(TSO_A, authenticity_A, a2pSOO_A, howbody_avg_A, 
+#          relag_A, careerasp_A,  trigram_score_A, TSO_P, 
+#          authenticity_P, a2pSOO_P, howbody_avg_P, 
+#          relag_P, careerasp_P, trigram_score_P)
+# 
+# #Correlation tables
+# correlations <- apa.cor.table(clarksmith_correlations, table.number=1)
 ```
 
 ```{r corrtable, include=TRUE, echo=FALSE, results='asis'}
@@ -321,37 +195,180 @@ apa_table(descriptives, caption = "Descriptive Statistics for Study Variables")
 ##Post interaction Measures
 The following measures were collected in the order they are presented following the interaction. Correlations appear in Table\ \@ref(tab:corrtable), and descriptive statistics appear in Table\ \@ref(tab:descriptives). 
 
+```{r trigram}
+#Cognitive performance - Full sample
+mean_trigram <- favstats(~trigram_score_A, data=clarksmith_women)$mean
+sd_trigram <- favstats(~trigram_score_A, data=clarksmith_women)$sd
+```
+
 ###Cognitive Performance
 Trigrams from the Remote Associates Task [@mcfarlin1984remote] were utilized to assess cognitive performance after the interaction. Ten items were selected and presented to participants. For example, the correct answer for the trigram “Quack: Pond: Waddle” would be “Duck”. Participants are limited to 30 seconds. For every correct answer, 1 point is given. The mean score was `r mean_trigram` (SD = `r sd_trigram`). Cognitive performance was measured first in order to measure potential immediate detriments to performance [@garcia2016objectification].
+
+```{r alpha_SOO}
+##SOO
+#Clark
+clark_extsoo_alpha <- psych::alpha(select(clark_measures, otherint_1, otherint_2, 
+                                          otherint_5, otherint_6, otherint_10))$total[2]
+clark_intsoo_alpha <- psych::alpha(select(clark_measures, otherint_3, otherint_4, 
+                                          otherint_7, otherint_8, otherint_9, otherint_11, 
+                                          otherint_12))$total[2]
+#Smith
+smith_extsoo_alpha <- psych::alpha(select(smith, otherint_1, otherint_2, otherint_5, 
+                                          otherint_6, otherint_10))$total[2]
+smith_intsoo_alpha <- psych::alpha(select(smith, otherint_3, otherint_4, otherint_7, 
+                                          otherint_8, otherint_9, otherint_11, otherint_12))$total[2]
+```
 
 ###State Other-Objectification
 To measure the participant’s objectification of their partner in the interaction, participants were asked a series of questions about the frequency of thoughts in relation to  multiple characteristics of their partner @garcia2016objectification. Questions included aspects of their partner’s internal traits such as personality, friends, family, and extracurricular interests, as well as external traits such as body, appearance, clothing, and body parts. All questions were to be rated on a scale from 1 (not at all) to 7 (constantly). Objectification was measured by getting the difference between the average frequency of thought about their partner’s external traits ($\alpha$ = `r printnum(clark_extsoo_alpha)[1,1]` for Sample 1, $\alpha$ = `r printnum(smith_intsoo_alpha)[1,1]` for Sample 2) and frequency of thought about their partner’s internal traits ($\alpha$ = `r printnum(clark_extsoo_alpha)[1,1]` for Sample 1, $\alpha$ = `r printnum(smith_extsoo_alpha)[1,1]` for Sample 2). A positive score in this scale would indicate that the participant thought about their partner’s external traits more than the partner’s internal traits, and a negative score would indicate the opposite.
 
+```{r alpha_intauth}
+##Interaction Authenticity
+#Clark
+clark_intauth_alpha <- psych::alpha(select(clark_measures, inter_1, inter_3, inter_5, 
+                                           inter_6, inter_7, inter_9, inter_10, interaux_5, 
+                                           interaux_6))$total[2]
+#Smith
+smith_intauth_alpha <- psych::alpha(select(smith, inter_1, inter_3, inter_5, inter_6, 
+                                           inter_7, inter_9, inter_10, interaux_5, 
+                                           interaux_6))$total[2]
+```
+
 ###Interaction Authenticity
 To assess the magnitude to which individuals felt comfortable in the interaction and perceived the interaction to be authentic, we asked participants to rate the extent to which they felt comfortable, happy, friendly, warm, easygoing, sincere, and authentic on a scale ranging from 1 (not at all) to 7 (very much), much alike [@garcia2016objectification]. Participants were additionally asked to rate their interaction partner’s authenticity as well as their own: ‘‘Do you think your partner was authentic during your interaction?’’ and ‘‘Were you authentic during your interaction?’’ These questions were ranked on a scale from 1 (not authentic at all). These were combined to form the authenticity scale ($\alpha$ = `r printnum(clark_intauth_alpha)[1,1]` for Sample 1, $\alpha$ = `r printnum(smith_intauth_alpha)[1,1]` for Sample 2). 	
+
+```{r alpha_SSO}
+##SSO
+#Clark - two items
+clark_howbody_alpha<- psych::alpha(select(clark_measures, howbody_1, howbody_2))$total[2]
+#Smith - two items
+smith_howbody_alpha <- psych::alpha(select(smith, howbody_1, howbody_2))$total[2]
+#Clark - three items
+clark_howbody3 <- psych::alpha(select(clark_measures, howbody_1, howbody_2, howbody_3))
+#Smith - three items
+smith_howbody3 <- psych::alpha(select(smith, howbody_1, howbody_2, howbody_3))
+```
 
 ###State Self-Objectification
 To assess state self-objectification, we used an average of two items from @saguyetal2010 that were also used in @garcia2016objectification. Participants were asked to rank how much they agreed with the following statements: “During the interaction I felt more like a body than a full self” and “I felt more like a body than as a real person in the interaction”. Originally, @saguyetal2010 used 3 items, but in both samples the reliability of the scale was higher once the third item was removed, so we chose to only use the first two for our measure of SSO, leaving us with a reliable scale ($\alpha$ = `r printnum(clark_howbody_alpha)[1,1]` for Sample 1, and $\alpha$ = `r printnum(smith_howbody_alpha)[1,1]` for Sample 2.)
 
+```{r alpha_relagen}
+##Relationship Agency
+#Clark
+clark_relag_alpha <- psych::alpha(select(clark_measures, relag_1, relag_2, relag_3, 
+                                         relag_4, relag_5, relag_6, relag_7, relag_8, 
+                                         relag_9.r))$total[2]
+#Smith
+smith_relag_alpha <- psych::alpha(select(smith, relag_1, relag_2, relag_3, relag_4, 
+                                         relag_5, relag_6, relag_7, relag_8, 
+                                         relag_9.r))$total[2]
+
+#corr.test(select(clark_measures, relag_1, relag_2, relag_3, relag_4, relag_5, relag_6, relag_7, relag_8, relag_9.r))
+#corr.test(select(smith, relag_1, relag_2, relag_3, relag_4, relag_5, relag_6, relag_7, relag_8, relag_9.r))
+##DROPPING ITEM 9
+clark_relag_alpha <- psych::alpha(select(clark_measures, relag_1, relag_2, relag_3, 
+                                         relag_4, relag_5, relag_6, relag_7, relag_8))$total[2]
+
+smith_relag_alpha <- psych::alpha(select(smith, relag_1, relag_2, relag_3, relag_4, 
+                                         relag_5, relag_6, relag_7, relag_8))$total[2]
+```
+
 ###Relationship Agency
 A scale was used from @garcia2016objectification to assess how much agency an individual believes they would possess in future romantic relationships. Participants were asked how likely it was that they would do the following: ‘‘ask someone out on a date,’’ ‘‘open the door for your date,’’ ‘‘pay for a date,’’ ‘‘ask your boyfriend/girlfriend to marry you,’’ ‘‘initiate sex with your girlfriend/boyfriend,’’ ‘‘initiate condom use during sex,’’ ‘‘surprise your boyfriend/ girlfriend with a gift,’’ and ‘‘ask your girlfriend/boyfriend to move with you to a new place.’’ Responses were measured on a scale ranging from 1 (not at all likely) to 7 (extremely likely). The scale originally had 9 items, but the 9th item had low correlations with the remaining items, ranging from .02 to .30 for the first sample, and .04 to .30 for the second sample. The item was intended to be reverse coded, but correlations were still low enough to make the scale unreliable. Therefore, the ninth item was removed. As a result, the scale had moderately high reliability for both samples ($\alpha$ = `r printnum(clark_relag_alpha)[1,1]` for Sample 1, ($\alpha$ = `r printnum(smith_relag_alpha)[1,1]` for Sample 2).
+
+```{r alpha_career}
+##Career Aspirations
+#Clark
+clark_measures <- clark_measures %>% #reverse code certain career aspiration variables
+  mutate(careerasp4.r = (min(careerasp_4, na.rm = TRUE) + max(careerasp_4, na.rm = TRUE) - careerasp_4),
+         careerasp7.r = (min(careerasp_7, na.rm = TRUE) + max(careerasp_7, na.rm = TRUE) - careerasp_7),
+         careerasp10.r = (min(careerasp_10, na.rm = TRUE) + max(careerasp_10, na.rm = TRUE) - careerasp_10))
+
+clark_careerasp_alpha <- psych::alpha(select(clark_measures, careerasp_1, careerasp_2, 
+                                             careerasp_3, careerasp4.r, careerasp_5, 
+                                             careerasp_6, careerasp7.r, careerasp_8, 
+                                             careerasp_9, careerasp10.r))$total[2]
+
+#Smith
+smith <- smith %>% #reverse code certain career aspiration variables
+  mutate(careerasp4.r = (min(careerasp_4, na.rm = TRUE) + max(careerasp_4, na.rm = TRUE) - careerasp_4),
+         careerasp7.r = (min(careerasp_7, na.rm = TRUE) + max(careerasp_7, na.rm = TRUE) - careerasp_7),
+         careerasp10.r = (min(careerasp_10, na.rm = TRUE) + max(careerasp_10, na.rm = TRUE) - careerasp_10))
+
+smith_careerasp_alpha <- psych::alpha(select(smith, careerasp_1, careerasp_2, 
+                                             careerasp_3, careerasp4.r, careerasp_5, 
+                                             careerasp_6, careerasp7.r, careerasp_8, 
+                                             careerasp_9, careerasp10.r))$total[2]
+```
 
 ###Career Aspirations
 To conceptualize participants’ career aspirations after the interaction, we used the 10-item adaptation of @grayobrien2007’s Career Aspiration Scale employed in @garcia2016objectification, which asked participants to consider how true 10 statements were in regard to their future careers on a scale from 0 (not at all true of me) to 4 (very true of me). Items include "I hope to become a leader in my career field" and "I hope to move up through any organization or business I work in." Items were fairly reliable ($\alpha$ = `r printnum(clark_careerasp_alpha)[1,1]` for Sample 1, $\alpha$ = `r printnum(smith_careerasp_alpha)[1,1]` for Sample 2).
 
+```{r alpha_TSO}
+###TSO
+#Clark--external and internal
+clark_funcTSO_alpha <- psych::alpha(select(clark_measures, tso_1, tso_2, tso_4, tso_7, tso_9), check.keys=TRUE)$total[2]
+clark_physTSO_alpha <- psych::alpha(select(clark_measures, tso_3, tso_5, tso_6, tso_8, tso_10), check.keys=TRUE)$total[2]
+
+#Smith--external and internal
+smith_funcTSO_alpha <- psych::alpha(select(smith, tso_1, tso_2, tso_4, tso_7, tso_9), check.keys=TRUE)$total[2]
+smith_physTSO_alpha <- psych::alpha(select(smith, tso_3, tso_5, tso_6, tso_8, tso_10), check.keys=TRUE)$total[2]
+
+
+```
+
 ###Trait Self-Objectification
 Trait self-objectification (TSO) was assessed using the Self-Objectification Questionnaire [@fredricksonetal1998; @nollfredrickson1998], which evaluates the extent to which individuals view their bodies in observable versus nonobservable ways. The questionnaire asked participants to rank order both appearance and functional aspects of their bodies, from 1 (least important) to 10 (most important), with respect to physical self-concepts. Of the ten body attributes, five of the items were appearance-based (weight, sex appeal, physical attractiveness, firm/sculpted muscles and body measurements), and five of the items were competence-based (strength, physical coordination, energy level, health and physical fitness). Difference scores were computed by subtracting the sum of the 5 functional aspects/competence attributes (e.g., health, strength) from the sum of the 5 physical self-concepts/appearance attributes (e.g., physical attractiveness, weight), and all measures were multiplied by -1, as was done in @garcia2016objectification, so that positive scores indicated greater TSO. 
 
+```{r demographics}
+#favstats(~TSO_A, data=clarksmith_women)
+#favstats(~a2pSOO_A, data=clarksmith_women)
+#favstats(~howbody_avg_A, data=clarksmith_women)
+#favstats(~relag_A, data=clarksmith_women)
+#favstats(~careerasp_A, data=clarksmith_women)
+#favstats(~authenticity_A, data=clarksmith_women)
+#favstats(~trigram_score_A, data=clarksmith_women)
+
+#Mean and SD of age of sample
+mean_age <- favstats(~age_A, data = clarksmith_women)$mean
+sd_age <- favstats(~age_A, data = clarksmith_women)$sd
+tally(clarksmith_women$race_A == clarksmith_women$race_P)
+
+#Calculating race percentages
+tally(~race_A, data = clarksmith_women)  #Note that we can add "format = percentage" and not need to calculate
+percentage_black <- 6/(6+18+31+6+3)*100
+percent_asian <- 18/(6+18+31+6+3)*100
+percent_white <- 31/(6+18+31+6+3)*100
+percent_latinx <- 6/(6+18+31+6+3)*100
+percent_other <- 3/(6+18+31+6+3)*100
+tally(~sexor_A, data=clarksmith_women)
+percent_straight <-(41/64)*100
+percent_queer <- (3+8+5)/64*100
+tally(~gender_A, data=clarksmith_women)
+
+table(clarksmith_women$race_A, clarksmith_women$race_P)
+samerace_white <- 16/2 #divide by 2 since table is people, not pairs
+samerace_minority <- (6+2)/2
+mixedrace_white <- 2+10+2+1
+mixedrace_minority <- 1+2+1+1
+
+test <- clarksmith_women %>%
+  filter(race_A==3, race_A!=race_P)
+
+tally(~gender, data=clark_measures)
+tally(~gender, data=smith)
+```
+
 ###Description of the Samples
 Thirty-two previously unacquainted self-identifying female-sex dyads (64 total participants) from two liberal arts institutions in the Northeast of the United States participated in this study.  More specifically, twelve of the pairs, which derived from Sample 1, were students at a co-ed liberal arts college, while the remaining twenty pairs who came from Sample 2 attended a women’s liberal arts college. Initially, data was collected from same-sex and mixed-sex dyads that comprised of male and female gendered individuals. Sample 1 originally consisted of twenty-two pairs, twelve men and thirty-two women. Twenty-three pairs made up of forty-three women and one man, as well as two participants who did not identify with either gender category, formed Sample 2. Due to similarities across samples in regard to correlation patterns between significant variables within this study, the two datasets were combined. For consistency, we limited participant data to same sex female pairs at the two colleges. These participants were mostly first-year college students, with an average age of `r mean_age` (SD = `r sd_age`). The sample was `r percent_white`% White/European American, `r percentage_black`% Black/African-American, `r percent_asian`% Asian/Pacific Islander, `r percent_latinx`% Latinx, and `r percent_other`% mixed-race. There were `r samerace_white` White/White pairs and `r samerace_minority` same race racial minority pairs, for a total of `r samerace_white + samerace_minority` same-race pairs. The remaining `r mixedrace_white + mixedrace_minority` were mixed race pairs, of which `r mixedrace_white` were White/racial minority pairings and `r mixedrace_minority` were cross-racial minority group pairs. `r percent_straight`% of the sample identified as heterosexual, and `r percent_queer`% identified as gay, lesbian or bisexual. 
- 
-## Data analysis
 
+# Results
 ```{r create_r-references, warning=FALSE, message=FALSE}
 #cite_r(file = "references.bib")
 r_refs(file = "r-references.bib")
 ```
 
+## Data analysis
 We used `r cite_r("r-references.bib")` for all our analyses.
 
 ```{r apim, include=TRUE, echo=FALSE, results='asis', out.width="400px", fig.cap="Basic actor-partner interdependence model (APIM) depiction."}
@@ -362,12 +379,7 @@ include_graphics("APIM_figure.png")
 include_graphics("2016_figure.jpg")
 ```
 
-
-
-# Results
-
 ## Analysis Strategy
-
 This study sought to replicate the results of @garcia2016objectification’s study, done with male-female pairs, which used dyadic analysis to detect whether partners’ objectification of one another affected state self-objectification (SSO). See Figure\ \@ref(fig:2016figure) for the path analysis results of the previous study. We hope to investigate how the main effects found in the previous study relay to interactions between women: specifically, the relationship between state-other objectification and self-state objectification and the resulting effect of self-state objectification on inauthenticity during the interaction.
 
 We used path analysis to obtain our estimates, but because our sample is nonindependent, we used the indistinguishable actor–partner interdependence model [@olsen2006structural]. The APIM can be defined as a "model of dyadic relationships that integrates a conceptual view of interdependence with the appropriate statistical techniques for measuring and testing it" [@olsen2006structural]. See Figure\ \@ref(fig:apim) for a basic APIM model. Unlike the original @garcia2016objectification study, our study deals with indistinguishable dyads, meaning the designation of who is designated as "actor" and who is designated as "partner" is arbitrary. Due to constraints of the basic APIM, in that this was an exploration of indistinguishable female dyads, we had to fix all path estimates to be the same across/between people and partners, in addition to all variances, covariances, endogenous intercepts, and exogenous means. Due to the complexity of the original @garcia2016objectification study, we also had to set the exogenous covariances equal. More specifically, the covariances between TSO, actor and partner objectification, and the interaction between actor TSO and partner objectification (and vice versa).
@@ -690,11 +702,11 @@ include_graphics("SEMfigure.png")
 ##Main Results
 All model estimates and p-values are found in Table\ \@ref(tab:sem) and the relationships are depicted in Figure\ \@ref(fig:semfigure). The most important findings from @garcia2016objectification were the significant partner effect between actor SSO and partner objectification (specifically men's objectification of women and women's SSO), and the link between actor SSO and actor authenticity (also specifically for women). We did not find a significant effect between actor SSO and actor authenticity ($\beta$= -.10, $p$=.38), which means we do not have evidence to support the idea that partner objectification is the cause for the negative effects related to relationship inauthenticity. However, we did find a significant relationship between partner objectification and actor SSO ($\beta$= .25, $p$=.03), which supports our hypothesis that objectification from other women also causes women to self-objectify just as it does in interactions between male-female pairs. We also found a significantly negative effect of authenticity on career aspirations ($\beta$= .18, $p$=.01) and relationship agency ($\beta$=.27, $p$=.01). We found that the model had good fit ($\chi^2$=22.33, $df$=34). In this case, a good fit indicates that there are no direct effects of SSO or SOO on the outcomes on cognitive performance, relationship agency, and career aspirations, which indicates that the path we chose makes sense.
 
-# Discussion
+#Discussion
 As stated previously, we did not find a significant effect between actor SSO and actor authenticity ($\beta$= -.10, $p$=.38), which suggests that there is not sufficient evidence to support the claim that partner objectification is the cause for the diverse range of negative effects related to relationship inauthenticity. However, we did observe a significant partner effect of objectification on actor self-objectification, which does align with our hypothesis that theorized objectification from other women can also cause women to self-objectify just as they do within interactions between male-female pairs. The results of this study demonstrate the complex and ambivalent nature of female sexual objectification and additionally highlight the psychological and social consequences of such objectification processes on women’s social relationships and well-being. The sample of the current study was comprised of Western women, being that sexual objectification is most prevalent in this culture [@loughnan2015], and research on objectification conducted outside of Western or Westernized countries is scarce [@moradi2008]. Because “bodies exist within social and cultural contexts, and hence are also constructed through sociocultural practices and discourses” [@robertsfredrickson, p.174], it is important to consider how diverse social identities within unique cultural contexts may inform sexual objectification phenomenon to test the cross-cultural applicability of theoretical frameworks [@loughnan2015]. Further, sexualzing experiences and self-objectification are thought to begin a very young age, and thus, researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014; @bury2016]. Considering the fact that the average mean age of the investigated participants of this current study was 18.85 years, research among younger and older individuals is needed, especially because self-objectification may change over time [@robertsfredrickson]. It may be valuable to question the extent to which children, adolescents, or emerging adults of different races or ethnicities are exposed to varied amounts of sexulizing content. Also, future experiments or longitudinal studies should explore the external validity of the notions of self-objectification and how the operalization of self-objectification may be improved. Regardless, the results from the current analysis highlight how subtle forms of sexist discrimination operate to inform prevention and intervention efforts in both clinical and educational contexts. These results are quite useful for promoting mental health and within early action programs for girls and young women, where scholars and practitioners might provide the tools necessary to circumvent or mitigate negative effects on self-objectification, and combat such experiences.
 
 
-
+#References
 
 
 \newpage
